# bemis-public-library-studio-docs

./: LICENSE  README.md  mkdocs.yml  pyproject.toml  staticwebapp.config.json
.github/workflows/: azure-static-web-apps-gray-stone-085c4c510.yml
docs/: cleanliness-checklist.md  index.md  studio-equipment-list.md
docs/Tutorials/: tutorial-audio-recording.md  tutorial-iMac-login.md
docs/Tutorials/File-Transfer/: tutorial-dropbox.md  tutorial-flash-drive.md  tutorial-google-drive.md
docs/stylesheets/: extra.css
