[tool.poetry]
name = "studio-docs"
version = "0.1.0"
description = "This is documentation for Littleton Bemis Public Library — The Studio."
authors = ["Charlotte Worthey"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.40"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
